added a publication for testing layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>SugarJ</h1>
 
 <h2>News</h2>
 
@@ -50,7 +49,8 @@ Paper at LDTA 2012
 | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/editorlibs.pdf">.pdf</a> ]</li>
 <li>Paper presentation SugarJ: Library-based Syntactic Language Extensibility at OOPSLA 2011
 [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegRKO11">abstract</a>
-| <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegRKO11%0A%7C%20%5B.pdf%5D(http://www.informatik.uni-marburg.de/%7Eseba/publications/sugarj.pdf">bibtex</a> ]</li>
+| <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegRKO11">bibtex</a>
+| <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/sugarj.pdf">.pdf</a> ]</li>
 </ul><h2>Description</h2>
 
 <p>In essence, the goal of SugarJ is to enable expressing programms in the syntax most natural to the problem domain the program is supposed to address. For instance, when generating XML documents in Java, the programmer should be able to use standard XML syntax instead of Java syntax for calling JDOM, say.</p>
@@ -89,6 +89,37 @@ The source code of all components of SugarJ is available on github at <a href="h
 <li>Jonas Pusch, University of Marburg</li>
 <li>Stefan Fehrenbach, University of Marburg</li>
 </ul><h2>Publications</h2>
+
+    <p id="ErdwegGR12">
+      Sebastian Erdweg, Paolo G. Giarrusso, and Tillmann Rendel.
+      <b>Language Composition Untangled</b>.
+      In <em>Proceedings of Workshop on Language Descriptions, Tools and Applications (LDTA)</em>,
+      2012. to appear.
+      [ <a href="publications/bib.html#ErdwegGR12">bib</a> |
+        <a href="http://www.informatik.uni-marburg.de/~seba/publications/languagecomposition.pdf">.pdf</a>
+      ]
+      <blockquote>
+        <p>
+        In language-oriented programming and modeling, software developers
+        are largely concerned with the definition of domain-specific
+        languages (DSLs) and their composition. While various implementation
+        techniques and frameworks exist for defining DSLs, language
+        composition has not obtained enough attention and is not well-enough
+        understood. In particular, there is a lack of precise terminology
+        for describing observations about language composition in theory and
+        in existing language-development systems. To clarify the issue, we
+        specify five forms of language composition: language extension,
+        language restriction, language unification, self-extension, and
+        extension composition. We illustrate this classification by various
+        examples and apply it to discuss the performance of different
+        language-development system with respect to language composition. We
+        hope that the terminology provided by our classification will enable
+        more precise communication on language composition.
+        </p>
+      </blockquote>
+    </p>
+
+
       </section>
     </div>
 
