--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Paper at LDTA 2012
 
 <h2>Installation and Usage</h2>
 
-<p>Please also take a look at <a href="TODO">first steps with SugarJ</a>.</p>
+<p>Please also take a look at <a href="first-steps.html">first steps with SugarJ</a>.</p>
 
 <p>For a quick start, install our Eclipse plugin available at <a href="http://update.sugarj.org/">http://update.sugarj.org/</a>.
 The source code of all components of SugarJ is available on github at <a href="http://github.com/seba--/sugarj">http://github.com/seba--/sugarj</a>:
