--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/seba--/sugarj">Fork Me on GitHub</a>
 
-          <h1 id="project_title">SugarJ</h1>
-          <h2 id="project_tagline">Library-based Language Extensibility</h2>
+          <a href="index.html"><h1 id="project_title">SugarJ</h1>
+          <h2 id="project_tagline">Library-based Language Extensibility</h2></a>
 
           <section id="downloads">
             <a class="zip_download_link" href="https://github.com/seba--/sugarj/zipball/master">Download this project as a .zip file</a>
@@ -108,8 +108,8 @@ The source code of all components of SugarJ is available on github at <a href="h
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">SugarJ maintained by <a href="https://github.com/seba--">seba--</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <!-- <p class="copyright">SugarJ maintained by <a href="https://github.com/seba--">seba--</a></p> -->
+        <!-- <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p> -->
       </footer>
     </div>
 
