encode double dash

--- a/first-steps.html
+++ b/first-steps.html
@@ -88,7 +88,7 @@ eclipse.ini file.
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <!-- <p class="copyright">SugarJ maintained by <a href="https://github.com/seba--">seba--</a></p> -->
+        <!-- <p class="copyright">SugarJ maintained by <a href="https://github.com/seba&#45;&#45;">seba&#45;&#45;</a></p> -->
         <!-- <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p> -->
       </footer>
     </div>
