--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/seba--/sugarj">Fork Me on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/seba&#45;&#45;/sugarj">Fork Me on GitHub</a>
 
           <a href="index.html"><h1 id="project_title">SugarJ</h1>
           <h2 id="project_tagline">Library-based Language Extensibility</h2></a>
 
           <section id="downloads">
-            <a class="zip_download_link" href="https://github.com/seba--/sugarj/zipball/master">Download this project as a .zip file</a>
-            <a class="tar_download_link" href="https://github.com/seba--/sugarj/tarball/master">Download this project as a tar.gz file</a>
+            <a class="zip_download_link" href="https://github.com/seba&#45;&#45;/sugarj/zipball/master">Download this project as a .zip file</a>
+            <a class="tar_download_link" href="https://github.com/seba&#45;&#45;/sugarj/tarball/master">Download this project as a tar.gz file</a>
           </section>
         </header>
     </div>
@@ -39,7 +39,7 @@ Paper at LDTA 2012
 [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegGR12">abstract</a>
 | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegGR12">bibtex</a>
 | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/languagecomposition.pdf">.pdf</a> ]</li>
-<li>SugarJ now on github: <a href="http://github.com/seba--/sugarj">http://github.com/seba--/sugarj</a>
+<li>SugarJ now on github: <a href="http://github.com/seba&#45;&#45;/sugarj">http://github.com/seba&#45;&#45;/sugarj</a>
 </li>
 <li>Tool demonstration and poster on SugarJ at SPLASH 2011</li>
 <li>Paper Growing a Language Environment with Editor Libraries at GPCE 2011
@@ -65,10 +65,10 @@ Paper at LDTA 2012
 <p>Please also take a look at <a href="first-steps.html">first steps with SugarJ</a>.</p>
 
 <p>For a quick start, install our Eclipse plugin available at <a href="http://update.sugarj.org/">http://update.sugarj.org/</a>.
-The source code of all components of SugarJ is available on github at <a href="http://github.com/seba--/sugarj">http://github.com/seba--/sugarj</a>:
-<a href="http://github.com/seba--/sugarj/compiler">compiler</a>,
-<a href="http://github.com/seba--/sugarj/editor">IDE</a>,
-<a href="http://github.com/seba--/sugarj/test-workspace">case studies</a>.</p>
+The source code of all components of SugarJ is available on github at <a href="http://github.com/seba&#45;&#45;/sugarj">http://github.com/seba&#45;&#45;/sugarj</a>:
+<a href="http://github.com/seba&#45;&#45;/sugarj/compiler">compiler</a>,
+<a href="http://github.com/seba&#45;&#45;/sugarj/editor">IDE</a>,
+<a href="http://github.com/seba&#45;&#45;/sugarj/test-workspace">case studies</a>.</p>
 
 <h2>Team</h2>
 
@@ -108,7 +108,7 @@ The source code of all components of SugarJ is available on github at <a href="h
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <!-- <p class="copyright">SugarJ maintained by <a href="https://github.com/seba--">seba--</a></p> -->
+        <!-- <p class="copyright">SugarJ maintained by <a href="https://github.com/seba&#45;&#45;">seba&#45;&#45;</a></p> -->
         <!-- <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p> -->
       </footer>
     </div>
