--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Paper at LDTA 2012
 [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegKRKOV11">abstract</a>
 | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegKRKOV11">bibtex</a>
 | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/editorlibs.pdf">.pdf</a> ]</li>
-<li>Paper presentation SugarJ: Library-based Syntactic Language Extensibility at OOPSLA 2011
+<li>Paper SugarJ: Library-based Syntactic Language Extensibility at OOPSLA 2011
 [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegRKO11">abstract</a>
 | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegRKO11">bibtex</a>
 | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/sugarj.pdf">.pdf</a> ]</li>
@@ -65,10 +65,21 @@ Paper at LDTA 2012
 <p>Please also take a look at <a href="first-steps.html">first steps with SugarJ</a>.</p>
 
 <p>For a quick start, install our Eclipse plugin available at <a href="http://update.sugarj.org/">http://update.sugarj.org/</a>.
-The source code of all components of SugarJ is available on github at <a href="http://github.com/seba&#45;&#45;/sugarj">http://github.com/seba&#45;&#45;/sugarj</a>:
+The source code of all components of SugarJ is available on github at <a href="http://github.com/seba&#45;&#45;/sugarj">http://github.com/seba&#45;&#45;/sugarj</a>:<br/>
+<a href="http://github.com/seba&#45;&#45;/sugarj/test-workspace">case studies</a>,
 <a href="http://github.com/seba&#45;&#45;/sugarj/compiler">compiler</a>,
-<a href="http://github.com/seba&#45;&#45;/sugarj/editor">IDE</a>,
-<a href="http://github.com/seba&#45;&#45;/sugarj/test-workspace">case studies</a>.</p>
+<a href="http://github.com/seba&#45;&#45;/sugarj/editor">IDE</a>.</p>
+
+<h3>Subprojects</h3>
+
+We are currently developing a number of extensions of SugarJ. The relevant code can be found as follows:
+
+<ul>
+<li>Model-oriented programming: in branch <a href="http://github.com/seba--/sugarj/tree/model-driven">model-driven</a></li>
+<li>Incremental introduction of DSLs for software maintenance: <a href="http://github.com/seba--/sugarj/tree/master/test-workspace/java-pet-store">Java Pet Store case study</a></li>
+<li>Language extensibility for any language: in <a href="http://github.com/frieger/sugarj">frieger's sugarj fork</a></li>
+</ul>
+
 
 <h2>Team</h2>
 
@@ -87,6 +98,7 @@ The source code of all components of SugarJ is available on github at <a href="h
 <a href="http://eelcovisser.org/">Eelco Visser</a>, Delft University of Technology</li>
 <li>Jonas Pusch, University of Marburg</li>
 <li>Stefan Fehrenbach, University of Marburg</li>
+<li>Felix Rieger, University of Marburg</li>
 </ul><h2>Publications</h2>
 
 <p>Sebastian Erdweg, Paolo G. Giarrusso, and Tillmann Rendel. <strong>Language Composition Untangled</strong>. In <em>Proceedings of Workshop on Language Descriptions, Tools and Applications (LDTA)</em>, 2012. to appear.
