--- a/first-steps.html
+++ b/first-steps.html
@@ -38,7 +38,7 @@ We collected a few guidelines to get you started with SugarJ more easily.
 
 <h3>Existing case studies</h3>
 
-A great of getting to know SugarJ is to look at existing case studies. We made
+A great way of getting to know SugarJ is to look at existing case studies. We made
 all of our case studies available online as open source. You can find them in
 our <a href="https://github.com/seba--/sugarj/tree/master/test-workspace">github
 repository</a>.
