use jpg instead of png

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Paper at LDTA 2012
 
 <p>We propose to integrate syntactic extensibility into the main extension mechanism of programming languages—libraries. Libraries thus export syntactic sugar in addition to semantic artifacts traditionally exported: classes, methods, data types, etc. When importing a library, the syntax of the general purpose language is augmented by the syntactic definition exported by the library.</p>
 
-<p><img src="xmleditorscreenshot.png" alt="SugarJ in action"></p>
+<p><img src="xmleditorscreenshot.jpg" alt="SugarJ in action"></p>
 
 <p>Notably, libraries that contain syntactic sugar retain the composability and self-applicability of conventional libraries: syntactic sugar can be composed by importing multiple libraries; syntactic sugar can be used in the development of a library that exports syntactic sugar itself. This enables the embedding of DSLs and the development of meta-DSLs, that is a DSL for defining DSLs, without ever leaving or reasoning outside of a SugarJ program.</p>
 
