--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 <li>
 <a href="http://www.informatik.uni-marburg.de/%7Erendel/">Tillmann Rendel</a>, University of Marburg</li>
 <li>
-<a href="www.uni-marburg.de/fb12/ps/team/kaestner">Christian Kästner</a>, University of Marburg</li>
+<a href="http://www.uni-marburg.de/fb12/ps/team/kaestner">Christian Kästner</a>, University of Marburg</li>
 <li>
 <a href="http://www.informatik.uni-marburg.de/%7Ekos/">Klaus Ostermann</a>, University of Marburg</li>
 <li>
