--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ Paper at LDTA 2012
 
 <p>For a quick start, install our Eclipse plugin available at <a href="http://update.sugarj.org/">http://update.sugarj.org/</a>.
 The source code of all components of SugarJ is available on github at <a href="http://github.com/seba&#45;&#45;/sugarj">http://github.com/seba&#45;&#45;/sugarj</a>:<br/>
-<a href="http://github.com/seba&#45;&#45;/sugarj/test-workspace">case studies</a>,
-<a href="http://github.com/seba&#45;&#45;/sugarj/compiler">compiler</a>,
-<a href="http://github.com/seba&#45;&#45;/sugarj/editor">IDE</a>.</p>
+<a href="http://github.com/seba&#45;&#45;/sugarj/tree/master/test-workspace">case studies</a>,
+<a href="http://github.com/seba&#45;&#45;/sugarj/tree/master/compiler">compiler</a>,
+<a href="http://github.com/seba&#45;&#45;/sugarj/tree/master/editor">IDE</a>.</p>
 
 <h3>Subprojects</h3>
 
