show eclipse download more prominently

--- a/first-steps.html
+++ b/first-steps.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline">Library-based Language Extensibility</h2></a>
 
           <section id="downloads">
-            <a class="zip_download_link" href="https://github.com/seba--/sugarj/zipball/master">Download this project as a .zip file</a>
-            <a class="tar_download_link" href="https://github.com/seba--/sugarj/tarball/master">Download this project as a tar.gz file</a>
+            <a class="zip_download_link" href="https://github.com/seba&#45;&#45;/sugarj/zipball/master">Download SugarJ as a .zip file</a>
+            <a class="eclipse_download_link" href="http://update.sugarj.org/">SugarJ Eclipse plugin</a>
           </section>
         </header>
     </div>
