--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline">Library-based Language Extensibility</h2></a>
 
           <section id="downloads">
-            <a class="zip_download_link" href="https://github.com/seba&#45;&#45;/sugarj/zipball/master">Download this project as a .zip file</a>
-            <a class="tar_download_link" href="https://github.com/seba&#45;&#45;/sugarj/tarball/master">Download this project as a tar.gz file</a>
+            <a class="zip_download_link" href="https://github.com/seba&#45;&#45;/sugarj/zipball/master">Download SugarJ as a .zip file</a>
+            <a class="eclipse_download_link" href="http://update.sugarj.org/">SugarJ Eclipse plugin</a>
           </section>
         </header>
     </div>
@@ -72,6 +72,9 @@ The source code of all components of SugarJ is available on github at <a href="h
 We are currently developing a number of extensions of SugarJ. The relevant code can be found as follows:
 
 <ul>
+<li>SugarHaskell: in branch <a href="http://github.com/seba--/sugarj/tree/haskell">haskell</a> with case studies
+    located in <a href="http://github.com/seba--/sugarj/tree/haskell/test-workspace/haskell">/test-workspace/haskell</a></li>
+<li>Layout-sensitive parsing: in repository <a href="http://github.com/seba--/layout-parsing/">layout-parsing</a></li>
 <li>Model-oriented programming: in branch <a href="http://github.com/seba--/sugarj/tree/model-driven">model-driven</a></li>
 <li>Incremental introduction of DSLs for software maintenance: <a href="http://github.com/seba--/sugarj/tree/master/test-workspace/java-pet-store">Java Pet Store case study</a></li>
 <li>Language extensibility for any language: in <a href="http://github.com/frieger/sugarj">frieger's sugarj fork</a></li>
@@ -81,18 +84,13 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 <h2>Team</h2>
 
 <ul>
-<li>
-<a href="http://www.informatik.uni-marburg.de/%7Eseba/">Sebastian Erdweg</a>, project leader, University of Marburg</li>
-<li>
-<a href="http://www.informatik.uni-marburg.de/%7Erendel/">Tillmann Rendel</a>, University of Marburg</li>
-<li>
-<a href="http://www.uni-marburg.de/fb12/ps/team/kaestner">Christian Kästner</a>, University of Marburg</li>
-<li>
-<a href="http://www.informatik.uni-marburg.de/%7Ekos/">Klaus Ostermann</a>, University of Marburg</li>
-<li>
-<a href="http://www.lclnet.nl/">Lennart Kats</a>, Delft University of Technology</li>
-<li>
-<a href="http://eelcovisser.org/">Eelco Visser</a>, Delft University of Technology</li>
+<li><a href="http://www.informatik.uni-marburg.de/%7Eseba/">Sebastian Erdweg</a>, project leader, University of Marburg</li>
+<li><a href="http://www.informatik.uni-marburg.de/%7Erendel/">Tillmann Rendel</a>, University of Marburg</li>
+<li><a href="http://www.uni-marburg.de/fb12/ps/team/kaestner">Christian Kästner</a>, University of Marburg</li>
+<li><a href="http://www.informatik.uni-marburg.de/%7Ekos/">Klaus Ostermann</a>, University of Marburg</li>
+<li><a href="http://www.lclnet.nl/">Lennart Kats</a>, Delft University of Technology</li>
+<li><a href="http://eelcovisser.org/">Eelco Visser</a>, Delft University of Technology</li>
+<li><a href="http://www.informatik.uni-marburg.de/~pgiarrusso/">Paolo G. Giarrusso</a>, University of Marburg</li>
 <li>Jonas Pusch, University of Marburg</li>
 <li>Stefan Fehrenbach, University of Marburg</li>
 <li>Felix Rieger, University of Marburg</li>
@@ -110,7 +108,8 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 
 <p>Sebastian Erdweg, Tillmann Rendel, Christian Kästner and Klaus Ostermann. <strong>SugarJ: Library-based Syntactic Language Extensibility</strong>. In <em>Proceedings of Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)</em>, pages 391–406. ACM, 2011. <strong>Distinguished Paper Award</strong>.
   [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegRKO11">abstract</a>
-  | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegRKO11%0A%20%20%7C%20%5B.pdf%5D(http://www.informatik.uni-marburg.de/%7Eseba/publications/sugarj.pdf">bibtex</a> ]</p>
+  | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegRKO11">bibtex</a>
+  | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/sugarj.pdf">.pdf</a> ]</p>
       </section>
     </div>
 
