--- a/first-steps.html
+++ b/first-steps.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/seba--/sugarj">Fork Me on GitHub</a>
 
-          <a href="."><h1 id="project_title">SugarJ</h1>
+          <a href="index.html"><h1 id="project_title">SugarJ</h1>
           <h2 id="project_tagline">Library-based Language Extensibility</h2></a>
 
           <section id="downloads">
