note haskell file extension

--- a/first-steps.html
+++ b/first-steps.html
@@ -60,7 +60,7 @@ project. For the meantime, please follow these three steps:
         &lt;/buildCommand&gt; 
   </blockquote>
 </li>
-<li>We're ready to go. Note: SugarJ source files must have the file extension ".sugj".</li>
+<li>We're ready to go. Note: SugarJ source files must have the file extension ".sugj". SugarHaskell files must have the file extensions ".shs".</li>
 </ol>
 
 <h3>Installation</h3>
