--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 
 <ul>
 <li>SugarHaskell: in branch <a href="http://github.com/seba--/sugarj/tree/haskell">haskell</a> with case studies
-    located in <a href="http://github.com/seba--/sugarj/tree/haskell/test-workspace/haskell">/test-workspace/haskell</a></li>
+    located in <a href="http://github.com/seba--/sugarj/tree/haskell/test-workspace/haskell">/test-workspace/haskell</a>, file extension is ".shs"</li>
 <li>Layout-sensitive parsing: in repository <a href="http://github.com/seba--/layout-parsing/">layout-parsing</a></li>
 <li>Model-oriented programming: in branch <a href="http://github.com/seba--/sugarj/tree/model-driven">model-driven</a></li>
 <li>Incremental introduction of DSLs for software maintenance: <a href="http://github.com/seba--/sugarj/tree/master/test-workspace/java-pet-store">Java Pet Store case study</a></li>
