news on SugarHaskell

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <h2>News</h2>
 
 <ul>
+<li>Syntactic extensibility for Haskell: SugarHaskell is up and running.<br/>
+    Install it from our <a href="http://update.sugarj.org/"> Eclipse update site</a>, including IDE support and layout-sensitive parsing.</li>
 <li>What does language composition really mean?
 Paper at LDTA 2012
 [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegGR12">abstract</a>
