--- a/update-site/index.html
+++ b/update-site/index.html
@@ -46,7 +46,7 @@ software installer: <a href="http://update.sugarj.org">http://update.sugarj.org<
 <li>In the 'work with' field, copy the SugarJ update site <a
 href="http://update.sugarj.org">http://update.sugarj.org</a> and hit enter.</li>
 <li> Be sure to deselect the 'Group items by category' checkbox on the bottom of
-the window.</li> <li>Select the latest instance of Sugarclipse and click
+the window.</li> <li>Select the latest instance of SugarJ for your language and click
 continue. This will install the SugarJ compiler and Eclipse plugin.</li>
 </ol>
 
