news: sugarj google group

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h2>News</h2>
 
 <ul>
+<li><a href="http://groups.google.com/group/sugarj">SugarJ Google group</a>: Discuss and stay up-to-date</li>
 <li>Syntactic extensibility for Haskell: SugarHaskell is up and running.<br/>
     Install it from our <a href="http://update.sugarj.org/"> Eclipse update site</a>, including IDE support and layout-sensitive parsing.</li>
 <li>What does language composition really mean?
@@ -84,6 +85,10 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 
 
 <h2>Team</h2>
+
+<p>
+  Get in touch, discuss, or simply stay up-to-date by joining the <a href="http://groups.google.com/group/sugarj">SugarJ Google group</a>.
+</p>
 
 <ul>
 <li><a href="http://www.informatik.uni-marburg.de/%7Eseba/">Sebastian Erdweg</a>, project leader, University of Marburg</li>
