--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h2>News</h2>
 
 <ul>
+<li><a href="http://sugarj.org/sugarhaskell.pdf">SugarHaskell paper</a> accepted at Haskell Symposium 2012</li>
 <li><a href="http://groups.google.com/group/sugarj">SugarJ Google group</a>: Discuss and stay up-to-date</li>
 <li>Syntactic extensibility for Haskell: SugarHaskell is up and running.<br/>
     Install it from our <a href="http://update.sugarj.org/"> Eclipse update site</a>, including IDE support and layout-sensitive parsing.</li>
@@ -103,19 +104,22 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 <li>Felix Rieger, University of Marburg</li>
 </ul><h2>Publications</h2>
 
+<p>Sebastian Erdweg, Felix Rieger, Tillmann Rendel, and Klaus Ostermann.
+<strong>Everybody Needs a Syntax Extension Sometimes</strong>.
+In <em>Proceedings of Haskell Symposium</em>, 2012. to appear.
+[ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegRRO12">abstract</a>
+| <a href="http://sugarj.org/sugarhaskell.pdf">.pdf</a> ]
+
 <p>Sebastian Erdweg, Paolo G. Giarrusso, and Tillmann Rendel. <strong>Language Composition Untangled</strong>. In <em>Proceedings of Workshop on Language Descriptions, Tools and Applications (LDTA)</em>, 2012. to appear.
   [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegGR12">abstract</a>
-  | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegGR12">bibtex</a>
   | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/languagecomposition.pdf">.pdf</a> ]</p>
 
 <p>Sebastian Erdweg and Lennart C. L. Kats and Tillmann Rendel and Christian Kästner and Klaus Ostermann and Eelco Visser. <strong>Growing a Language Environment with Editor Libraries</strong>. In <em>Proceedings of Conference on Generative Programming and Component Engineering (GPCE)</em>, pages 167–176. ACM, 2011.
   [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegKRKOV11">abstract</a>
-  | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegKRKOV11">bibtex</a>
   | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/editorlibs.pdf">.pdf</a> ]</p>
 
 <p>Sebastian Erdweg, Tillmann Rendel, Christian Kästner and Klaus Ostermann. <strong>SugarJ: Library-based Syntactic Language Extensibility</strong>. In <em>Proceedings of Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)</em>, pages 391–406. ACM, 2011. <strong>Distinguished Paper Award</strong>.
   [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegRKO11">abstract</a>
-  | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/bib.html#ErdwegRKO11">bibtex</a>
   | <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications/sugarj.pdf">.pdf</a> ]</p>
       </section>
     </div>
