fix SugarHaskell paper title

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@ We are currently developing a number of extensions of SugarJ. The relevant code 
 </ul><h2>Publications</h2>
 
 <p>Sebastian Erdweg, Felix Rieger, Tillmann Rendel, and Klaus Ostermann.
-<strong>Everybody Needs a Syntax Extension Sometimes</strong>.
+<strong>Layout-sensitive Language Extensibility with SugarHaskell</strong>.
 In <em>Proceedings of Haskell Symposium</em>, 2012. to appear.
 [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegRRO12">abstract</a>
-| <a href="http://sugarj.org/sugarhaskell.pdf">.pdf</a> ]
+| <a href="http://www.informatik.uni-marburg.de/~seba/publications/sugarhaskell.pdf">.pdf</a> ]
 
 <p>Sebastian Erdweg, Paolo G. Giarrusso, and Tillmann Rendel. <strong>Language Composition Untangled</strong>. In <em>Proceedings of Workshop on Language Descriptions, Tools and Applications (LDTA)</em>, 2012. to appear.
   [ <a href="http://www.informatik.uni-marburg.de/%7Eseba/publications.html#ErdwegGR12">abstract</a>
@@ -132,7 +132,21 @@ In <em>Proceedings of Haskell Symposium</em>, 2012. to appear.
       </footer>
     </div>
 
-    
+
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=8112241; 
+var sc_invisible=1; 
+var sc_security="b21d7b72"; 
+</script>
+<script type="text/javascript"
+src="http://www.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="hits counter"
+href="http://statcounter.com/free-hit-counter/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/8112241/0/b21d7b72/1/"
+alt="hits counter"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->    
 
   </body>
 </html>
