--- a/first-steps.html
+++ b/first-steps.html
@@ -93,7 +93,20 @@ eclipse.ini file.
       </footer>
     </div>
 
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=8112241; 
+var sc_invisible=1; 
+var sc_security="b21d7b72"; 
+</script>
+<script type="text/javascript"
+src="http://www.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="hits counter"
+href="http://statcounter.com/free-hit-counter/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/8112241/0/b21d7b72/1/"
+alt="hits counter"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->    
     
-
   </body>
 </html>
