--- a/jpromo/index.html
+++ b/jpromo/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
 
-    <title>SugarJ</title>
+    <title>JProMo</title>
   </head>
 
   <body>
